--- a/README
+++ b/README
@@ -1,11 +1,29 @@
-LibSrd 1.0.6
+LibSrd 1.1.0
 ==================
 Sam Davis
 
 Commands
 ------------------
-1. ```mergepdfs```  
+1. ```libsrd```
+Displays the commands available in libsrd.  
+
+2. ```mergepdfs```  
 Will merge all pdf's found in the current directory, and save the result at: ./Output/Output.pdf  
   
-2. ```imgconvert [InitalFormat] [FinalFormat]```  
-Will convert all images of ```InitalFormat``` in current directory to ```FinalFormat``` in ./Output/
+3. ```imgconvert [InitalFormat] [FinalFormat]```  
+Will convert all images of ```InitalFormat``` in current directory to ```FinalFormat``` in ./Output/   
+
+4. ```markhtml [InputFile] [Optional: AssetFolder] [Optional: StylesPath]```  
+Will convert a markdown file to a html file.  
+
+5. ```pdfresize```  
+Will resize the all pdf'd in folder to a4.
+
+
+Classes
+---------------
+1. Table  
+A custom TSV reading and writing table class, that can read, write and parse.  
+
+1. HtmlBuilder  
+A very nice html building class, that is used to programatically build html files.  
