--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-LibSrd 1.3.2
+pyLibSrd 1.3.2
 ==================
 Sam Davis
 
 Commands
 ------------------
-1. ```libsrd```
+1. ```pylibsrd```
 Displays the commands available in libsrd.  
 
 2. ```mergepdfs```  
@@ -26,4 +26,5 @@ Classes
 A custom TSV reading and writing table class, that can read, write and parse.  
 
 2. HtmlBuilder  
+
 A very nice html building class, that is used to programatically build html files.  
